# espn-fantasy-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini  smithery.yaml
.github/workflows/: publish.yml  test.yml
docs/: configuration.md  tools.md
src/espn_fantasy_mcp/: __init__.py  __main__.py  config.py  espn_client.py  models.py  server.py
src/espn_fantasy_mcp/tools/: league_tools.py  player_tools.py  roster_tools.py  team_tools.py  transaction_tools.py
tests/: conftest.py  test_config.py  test_espn_client.py  test_league_tools.py  test_models.py  test_player_tools.py  test_roster_tools.py  test_team_tools.py  test_trade_tools.py
